# Hindsight

./: .env.local.example  .gitignore  PRD (1).md  PROJECT_HANDOVER.md  README.md  clean-dataset.ts  docker-compose.yml  package-lock.json  package.json  test-add.js  test-apis.ts  test-ingest.ts  test-search.ts
cognee-onto/: LICENSE  README.md  pyproject.toml
cognee-onto/cognee_onto/: __init__.py  client.py  models.py  pipeline.py
cognee-onto/tests/: test_client.py  test_pipeline.py
cognee-service/: .env.template  Dockerfile  README.md  requirements.txt
cognee-service/app/: main.py  ontology.py  tasks.py
src/app/: error.tsx  globals.css  layout.tsx  page.tsx
src/app/api/activity/: route.ts
src/app/api/ask/: route.ts
src/app/api/ask-context/: route.ts
src/app/api/ask-deep/: route.ts
src/app/api/forget-all/: route.ts
src/app/api/graph/: route.ts
src/app/api/health/: route.ts
src/app/api/improve/: route.ts
src/app/api/ingest/: route.ts
src/app/api/recall/: route.ts
src/app/api/session/recall/: route.ts
src/app/api/session/remember/: route.ts
src/app/api/status/: route.ts
src/app/api/v2/remember/: route.ts
src/app/ask/: page.tsx
src/app/board/: page.tsx
src/app/dashboard/: page.tsx
src/components/: EvidenceBoard.tsx  MemoryControls.tsx  Sidebar.tsx  TemporalTimeline.tsx  TraversalTrail.tsx
src/hooks/: useDatasetSession.ts
src/lib/: db.ts  entityTheme.ts
src/lib/cognee/: client.ts  datasetCache.ts
src/lib/detective/: fragments.ts
src/lib/onto/: client.ts
src/lib/session/: store.ts
