[project]
name = "cognee-onto"
version = "0.1.0"
description = "Onto intake as a Cognee pipeline Task: clean + trust-score any URL into a DataPoint, ready for cognee.run_custom_pipeline()."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Hindsight (WeMakeDevs Cognee hackathon)" }]
dependencies = [
    "cognee>=0.3.9",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "respx"]

[project.urls]
Homepage = "https://github.com/ravixalgorithm/Hindsight/tree/main/cognee-onto"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["cognee_onto*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
